# trame-simput

./: .codespellrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.rst  pyproject.toml  setup.cfg
.github/workflows/: test_and_release.yml
docs/: api.md  definitions.md
examples/00_AddressBook/: app.py
examples/00_AddressBook/definitions/: lang_en.yaml  model.yaml
examples/01_Widgets/: app.py
examples/01_Widgets/definitions/: model.yaml  model_vue3.yaml  ui.xml
examples/02_Hints/: app.py  model.yaml
examples/03_VTK/: VTKState.json  app.py  vtkHelper.py  vtk_adaper.py  vtk_helpers.py
examples/03_VTK/definitions/: model.yaml  ui.xml
examples/04_DynaDomain/: app.py  model.yaml
examples/05_ReadonlyDisabled/: app.py  model.yaml  ui.xml
examples/06_DynaDropDown/: app.py  model.yaml
examples/07_ProxyList/: app.py
examples/07_ProxyList/definitions/: model.yaml  ui.xml
examples/howdoi/toggleView/: app.py
examples/simple_address_book/: app.py
examples/simple_address_book/definitions/: lang_fr.yaml  model.yaml  ui.xml
src/trame_simput/core/: __init__.py  domains.py  proxy.py
src/trame_simput/module/: .gitignore  __init__.py  protocol.py
src/trame_simput/widgets/: simput.py
tests/: conftest.py  test_import.py
trame/modules/: simput.py
trame/widgets/: simput.py
trame_simput/: __init__.py
trame_simput/core/: _old.py  domains.py  factory.py  mapping.py  proxy.py  utils.py
trame_simput/core/ui/: manager.py  utils.py
trame_simput/module/: __init__.py  _original.py  core.py  protocol.py
trame_simput/widgets/: simput.py
vue-components/: package-lock.json
vue-components/src/components/: index.js
vue-components/src/core/: utils.js
vue2-components/: README.md  package-lock.json  package.json  vue.config.js
vue2-components/src/: use.js
vue2-components/src/core/: utils.js
vue3-components/: package-lock.json  package.json  vite.config.js
vue3-components/src/: main.js
(+55 files in other folders)
